crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_remove_success.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<file_removed path="/home/user/file_to_delete.txt" status="File removed successfully"></file_removed>
