crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_search_max_output.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  total_lines="50"
  start_line="5"
  end_line="15"
  regex="search"
  file_pattern="*.txt"
><![CDATA[foo.txt:6:Match line 6: Test
foo.txt:7:Match line 7: Test
foo.txt:8:Match line 8: Test
foo.txt:9:Match line 9: Test
foo.txt:10:Match line 10: Test
foo.txt:11:Match line 11: Test
foo.txt:12:Match line 12: Test
foo.txt:13:Match line 13: Test
foo.txt:14:Match line 14: Test
foo.txt:15:Match line 15: Test]]>
</search_results>
