crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_search_no_matches.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<search_results path="/home/user/empty_project" regex="nonexistent"></search_results>
