crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_search_no_results.snap
---
source: crates/forge_app/src/execution_result.rs
expression: actual
---
ToolOutput {
    is_error: false,
    values: [
        Text(
            "No matches found",
        ),
    ],
}
