crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_search_truncated_output.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
---
path: /home/user/project
regex: search
file_pattern: *.txt
total_lines: 31
start_line: 5
end_line: 30
---
Match line 6: This is a search result line
Match line 7: This is a search result line
Match line 8: This is a search result line
Match line 9: This is a search result line
Match line 10: This is a search result line
Match line 11: This is a search result line
Match line 12: This is a search result line
Match line 13: This is a search result line
Match line 14: This is a search result line
Match line 15: This is a search result line
Match line 16: This is a search result line
Match line 17: This is a search result line
Match line 18: This is a search result line
Match line 19: This is a search result line
Match line 20: This is a search result line
Match line 21: This is a search result line
Match line 22: This is a search result line
Match line 23: This is a search result line
Match line 24: This is a search result line
Match line 25: This is a search result line
Match line 26: This is a search result line
Match line 27: This is a search result line
Match line 28: This is a search result line
Match line 29: This is a search result line
Match line 30: This is a search result line
