crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_search_with_results.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<fs_search path="/home/user/project" regex="Hello" file_pattern="*.txt" total_lines="2" start_line="1" end_line="2"><![CDATA[file1.txt:1:Hello world
file2.txt:3:Hello universe]]></fs_search>
