crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_undo_file_created.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<file_undo
  path="/home/user/new_file.txt"
  status="created"
  total_lines="3"
><![CDATA[New file content
Line 2
Line 3]]>
</file_undo>
