crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_undo_file_removed.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<file_undo
  path="/home/user/deleted_file.txt"
  status="removed"
  total_lines="3"
><![CDATA[Original file content
That was deleted
During undo]]>
</file_undo>
